--- a/package.json
+++ b/package.json
@@ -69,7 +69,11 @@
     "vue-splitpane": "1.0.4",
     "vuedraggable": "2.20.0",
     "vuex": "3.1.0",
-    "xlsx": "0.14.1"
+    "xlsx": "0.14.1",
+    "accounting": "^0.4.1",
+    "moment": "^2.24.0",
+    "vxe-table": "^2.8.8",
+    "xe-utils": "^2.3.2"
   },
   "devDependencies": {
     "@babel/core": "7.0.0",
