--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "url": "https://github.com/PanJiaChen/vue-element-admin/issues"
   },
   "dependencies": {
+    "@riophae/vue-treeselect": "^0.4.0",
+    "accounting": "0.4.1",
     "axios": "0.18.1",
     "clipboard": "2.0.4",
     "codemirror": "5.45.0",
@@ -51,10 +53,12 @@
     "echarts": "4.2.1",
     "element-ui": "2.13.0",
     "file-saver": "2.0.1",
+    "font-awesome": "4.7.0",
     "fuse.js": "3.4.4",
     "js-cookie": "2.2.0",
     "jsonlint": "1.6.3",
     "jszip": "3.2.1",
+    "moment": "2.24.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
@@ -63,19 +67,16 @@
     "sortablejs": "1.8.4",
     "tui-editor": "1.3.3",
     "vue": "2.6.10",
+    "vue-axios": "2.1.5",
     "vue-count-to": "1.0.13",
     "vue-i18n": "7.3.2",
     "vue-router": "3.0.2",
     "vue-splitpane": "1.0.4",
     "vuedraggable": "2.20.0",
     "vuex": "3.1.0",
-    "xlsx": "0.14.1",
-    "accounting": "0.4.1",
-    "moment": "2.24.0",
     "vxe-table": "2.8.24",
     "xe-utils": "2.4.1",
-    "vue-axios": "2.1.5",
-    "font-awesome": "4.7.0"
+    "xlsx": "0.14.1"
   },
   "devDependencies": {
     "@babel/core": "7.0.0",
