--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "vuedraggable": "2.20.0",
     "vuex": "3.1.0",
     "vxe-table": "2.9.9",
+    "vxe-table-plugin-element": "^1.8.9",
     "xe-utils": "2.4.1",
     "xlsx": "0.14.1"
   },
